footer fix align text

--- a/styles.css
+++ b/styles.css
@@ -684,6 +684,15 @@ h3 {
     }
 }
 
+@media (max-width:782px) {
+
+
+    footer p{
+
+        text-align: center !important;
+    }
+    
+}
 
 
 
